<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="it.simone.myproject.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/MenuFragment"
        android:name="it.simone.myproject.MenuFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/action_MenuFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />

        <action
            android:id="@+id/action_MenuFragment_to_LeaderboardFragment"
            app:destination="@id/LeaderboardFragment" />

        <action
            android:id="@+id/action_MenuFragment_to_SinglePlayerFragment"
            app:destination="@id/SinglePlayerFragment" />
    </fragment>
    <fragment
        android:id="@+id/LeaderboardFragment"
        android:name="it.simone.myproject.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard_fragment_label"
        tools:layout="@layout/fragment_leaderboard">

        <action
            android:id="@+id/action_LeaderboardFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/SinglePlayerFragment"
        android:name="it.simone.myproject.game.singlePlayer.SinglePlayerFragment"
        android:label="@string/single_player_fragment_label">

        <action
            android:id="@+id/action_SinglePlayerFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
</navigation>